# contact_map

./: .bandit  .codeclimate.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  .travis.yml.disabled  MANIFEST.in  README.md  appveyor.yml  autorelease_check.py  bandit.yml  contact_map.ipynb  contact_map.py  environment.yml  optional_installs.txt  postBuild  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: autorelease-default-env.sh  autorelease-deploy.yml  autorelease-gh-rel.yml  autorelease-prep.yml  unit-tests.yml
ci/: extract_requirements.py  mdtraj_dev.txt  pip-pre-install.sh
contact_map/: __init__.py  _version.py  atom_indexer.py  concurrence.py  contact_count.py  contact_map.py  contact_trajectory.py  dask_runner.py  fix_parameters.py  frequency_task.py  min_dist.py  plot_utils.py  py_2_3.py  set_dict.py  topology.py
docs/: Makefile  api.rst  conf.py  environment.yml  examples.rst  index.rst  installing.rst  make.bat  requirements.txt  understanding_docs.rst
examples/: .gitignore  01_overview.ipynb  Comparing different structures.ipynb  advanced_matplotlib.ipynb  changing_defaults.ipynb  comparing_different_structures.ipynb  concurrences.ipynb  contact_map.ipynb  contact_map_without_atom_slice.ipynb  contact_trajectory.ipynb  custom_plotting.ipynb  dask_contact_frequency.ipynb  dask_contact_trajectory.ipynb  exporting_data.ipynb  integrations.ipynb  performance.ipynb  plot_hotspots_nglview.ipynb
examples_colab/: concurrences.ipynb  contact_map.ipynb  contact_map_without_atom_slice.ipynb  dask_contact_frequency.ipynb
(+19 files in other folders)
