[metadata]
name = contact_map
version = 0.5.1.dev0
description = Contact maps based on MDTraj
long_description = file: README.md
long_description_content_type = text/markdown
author = David W.H. Swenson and Sander Roet
author_email = dwhs@hyperblazer.net, sanderroet@hotmail.com
license = LGPL 2.1+
url = https://github.com/dwhswenson/contact_map
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry

[options]
include_package_data = True
install_requires =
    future
    numpy
    mdtraj
    scipy
    pandas<1.0
packages = find:

[bdist_wheel]
universal=1
